# ConstantLight

./: .gitignore  README.md  binding.gyp  constantlight.js
docs/: Brightness value alg  testingAndImprovements
src/: BrightnessCalculator.cpp  CMakeLists.txt  ConstantLight.cpp
tests/: config.json  grabImage.js  lightAdjustment.js  package.json
tests/oldTests/: basic.js  cli.js  cli2.js  cli3.js  lifxTest.js
